[#3594] feature(messaging): introduce AF5 tracing support
Add distributed tracing support to axon-messaging using AF5 component configuration, decorator ordering and ProcessingContext semantics.

The core tracing API lives in org.axonframework.messaging.tracing. Command, event and query decorators live in their component-owned tracing packages:

- org.axonframework.messaging.commandhandling.tracing
- org.axonframework.messaging.eventhandling.tracing
- org.axonframework.messaging.queryhandling.tracing

Implement the AF5 tracing API:

- SpanFactory is the single public span-creation contract.
- SpanFactory implementations receive SpanAttributesProvider instances at construction time through SpanAttributesProviderRegistry.
- Tracing is disabled by omitting a SpanFactory component; enhancers then leave messaging components undecorated.
- Span parent resolution uses ProcessingContext and message metadata, never ThreadLocal state.
- NoOpSpanFactory is a test/composition null-object.
- MultiSpanFactory and LoggingSpanFactory follow the provider-list construction model.

Add messaging tracing configuration:

- TracingConfigurationDefaults and TracingConfigurationOrder.
- MessagingTracingSettings.
- MessagingTracingConfigurationEnhancer.
- MessagingSpanAttributesProviderConfigurationEnhancer.
- ServiceLoader entries for configuration and handler enhancement.
- @RegistrationScope on tracing enhancers to prevent duplicate decorator registration in child component registries.
- Near-maximal tracing decorator order so spans wrap inner framework decorators and measure caller-visible operations.

Add messaging instrumentation:

- TracingCommandBus opens dispatch and handle spans.
- TracingEventSink and TracingEventBus trace publish and commit operations while preserving EventSink/EventBus type compatibility.
- TracingEventHandlingComponent supports batch spans, distributed-in-same-trace behavior, disconnected handler spans and time-limit settings.
- TracingQueryBus covers query, s